@@ -37,6 +37,10 @@ Minor Changes:
    MUX and TinyMUSH. [MG]
  * @config/list now accepts wildcard patterns to match against option names.
    Suggested by Trinsec. [MG]
+ * The dreaded <Output flushed> message should show up a lot less frequently
+   on spammy debug output and the like. By popular demand. [SW]
+ * Added support for MSSP (Mud Server Status Protocol), based on patches by
+   Javelin and Teal. See mush.cnf for details. [MG]
 
 Commands:
  * Add /preserve switch to @chzone and @chzoneall, like @chown/preserve.
@@ -54,6 +58,7 @@ Functions:
    or l[v]players(), or makes it return only puppets/listening objects,
    for MUX/Rhost compatability. Suggested by Bane. [MG]
  * open() can now open rooms remotely. Suggested by Minion. [MG]
+ * reswitch() and co now perform $-replacements for subexpressions. [MG]
 
 Fixes:
  * Help fixes.
